--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,14 @@
         <surefire-plugin.version>3.0.0-M4</surefire-plugin.version>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <groovy.version>3.0.7</groovy.version>
+        <groovy.version>3.0.19</groovy.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.parameters>true</maven.compiler.parameters>
         <quarkus.native.container-runtime>docker</quarkus.native.container-runtime>
         <quarkus.native.container-build>true</quarkus.native.container-build>
         <quarkus.package.type>native</quarkus.package.type>
-        <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-native-image:20.3.1-java11
-        </quarkus.native.builder-image>
+        <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-native-image:20.3.1-java11</quarkus.native.builder-image>
     </properties>
     <dependencyManagement>
         <dependencies>
