--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
             <dependency>
                 <groupId>org.apache.lucene</groupId>
                 <artifactId>lucene-backward-codecs</artifactId>
+                <version>${lucene.version}</version>
             </dependency>
 
             <!-- <dependency>
